2011-11-25  Nils Durner
  * nl_item
  * fix cross-platform build
  * improved random number generator
  * gmtime_r

2010-11-06	Nils Durner
	* mkfifo()
	* use MinGW printf

2010-06-22	Nils Durner
	* sysconf()

2010-01-17  Nils Durner
	* sockets functions now take/return ints instead of SOCKETs

2010-01-09	Nils Durner
	* strcasestr()

2010-01-07	Michael Lenaghan
	* shortcut.cc is now plain C

2009-12-01	Nils Durner <ndurner@users.sourceforge.net>
	* translate top level paths that do not end with "/"
	* define error_t
	
2009-11-19	Nils Durner <ndurner@users.sourceforge.net>
	* stpcpy()

2009-11-05	Nils Durner	<ndurner@users.sourceforge.net>
	* handle "~" at the beginning of a path
	* releasing 0.1.5

2009-09-24	Nils Durner <ndurner@users.sourceforge.net>
	* added SRANDOM()

2009-05-18	Nils Durner <ndurner@users.sourceforge.net>
	* avoid linking against libuuid
	* rename CTIME() to PLIBC_CTIME()
	* return errno style error code from getsockopt()
	* new: GetErrnoFromWinsockError()

2009-03-30	Nils Durner <ndurner@users.sourceforge.net>
	* renamed ctime(), ctime_r(), gettimeofday() and search.h functions to
	  _win_*()

2009-03-25	Nils Durner <ndurner@users.sourceforge.net>
	* added search functions (tsearch, lsearch, hsearch)

2009-01-29	Nils Durner <ndurner@users.sourceforge.net>
	* releasing 0.1.4

2008-08-17	Nils Durner <ndurner@users.sourceforge.net>
	* Vista compatibility
	* gethostbyname2()
	* various resolver functions
	* kill()
	* fix mkstemp()

2008-06-15	Nils Durner <ndurner@users.sourceforge.net>
	* plibc.ini can now override the parameters passed to plibc_init()

2006-01-12	Nils Durner	<ndurner@users.sourceforge.net>
	* plibc_conv_to_win_path(_ex)() no longer crashes if passed null pointers

2006-01-05  Nils Durner  <ndurner@users.sourceforge.net>
	* fstat() didn't work with pipes
	* support for "$HOME" in path names

2006-05-13	Nils Durner  <ndurner@users.sourceforge.net>
	* releasing 0.1.3

2006-05-08	Nils Durner  <ndurner@users.sourceforge.net>